--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -68,7 +68,7 @@
             android:textAppearance="?android:textAppearanceMedium"
             android:textColor="@color/colorGreyText" />
 
-        <TextView
+        <com.vagad.utils.fonts.HindiFontTextView
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -78,7 +78,7 @@
             android:textAppearance="?android:textAppearanceLarge"
             android:textColor="@android:color/black" />
 
-        <TextView
+        <com.vagad.utils.fonts.HindiFontTextView
             android:id="@+id/txtDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
