--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -72,7 +72,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtTime"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:layout_width="match_parent"
@@ -81,7 +81,7 @@
                 android:textColor="@color/colorGreyText"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtTitle"
                 android:textAppearance="?android:textAppearanceLarge"
                 android:layout_width="match_parent"
@@ -91,7 +91,7 @@
                 android:textColor="@android:color/black"
                 android:layout_height="wrap_content" />
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtDescription"
                 android:textAppearance="?android:textAppearanceLarge"
                 android:layout_width="match_parent"
