--- a/app/src/main/res/layout/activity_news_detail_pager.xml
+++ b/app/src/main/res/layout/activity_news_detail_pager.xml
@@ -74,7 +74,7 @@
             android:orientation="vertical"
             android:padding="@dimen/activity_horizontal_margin">
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +82,7 @@
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/colorGreyText" />
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -92,7 +92,7 @@
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textColor="@android:color/black" />
 
-            <TextView
+            <com.vagad.utils.fonts.HindiFontTextView
                 android:id="@+id/txtDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
