--- a/app/src/main/res/layout/fragment_header_news.xml
+++ b/app/src/main/res/layout/fragment_header_news.xml
@@ -13,7 +13,7 @@
         android:scaleType="centerCrop"
         />
 
-    <TextView
+    <com.vagad.utils.fonts.HindiFontTextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
