--- a/app/src/main/res/layout/layout_header_fav.xml
+++ b/app/src/main/res/layout/layout_header_fav.xml
@@ -15,7 +15,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/splash_bg" />
 
-        <TextView
+        <com.vagad.utils.fonts.HindiFontTextView
             android:id="@+id/txtTitle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
