--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#E24B4B</color>
-    <color name="colorPrimaryDark">#B53C3C</color>
-    <color name="colorAccent">#E24B4B</color>
+    <color name="colorPrimary">#F44336</color>
+    <color name="colorPrimaryDark">#D32F2F</color>
+    <color name="colorAccent">#4CAF50</color>
     <color name="tabSelectedIconColor">#ffffff</color>
     <color name="tabUnselectedIconColor">#F1A5A5</color>
     <color name="transparentColor">#00000000</color>
     <color name="semiTransparentColor">#36000000</color>
     <color name="darkTransparentColor">#88000000</color>
     <color name="colorGreyText">#7B7A7B</color>
+    <color name="primary_light">#FFCDD2</color>
+    <color name="primary_text">#212121</color>
+    <color name="secondary_text">#757575</color>
+    <color name="divider">#BDBDBD</color>
 </resources>
