--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -1,6 +1,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/color_bg"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
@@ -26,8 +27,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 android:background="@android:color/white"
+                android:fitsSystemWindows="true"
                 android:orientation="vertical"
                 app:layout_collapseMode="parallax">
 
@@ -78,14 +79,31 @@
         app:mlpb_progress_color="@color/colorAccent"
         app:mlpb_progress_stoke_width="3dp" />
 
-    <ImageView
-        android:id="@+id/imgNoData"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_no_data"
+    <RelativeLayout
+        android:id="@+id/relNoData"
+        android:layout_width="match_parent"
         android:visibility="gone"
-        android:layout_gravity="center"
-        />
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imgNoData"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/help_four" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/no_data_avail"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:background="@color/darkTransparentColor"
+            />
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
