--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -27,9 +27,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/white"
                 android:fitsSystemWindows="true"
                 android:orientation="vertical"
+                android:background="@color/color_bg"
                 app:layout_collapseMode="parallax">
 
                 <android.support.v4.view.ViewPager
