--- a/app/src/main/res/layout/widget_list_view.xml
+++ b/app/src/main/res/layout/widget_list_view.xml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/words"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="3dp"
-    android:layout_marginLeft="3dp"
-    />
+    android:orientation="vertical"
+    >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:gravity="center"
+        android:textColor="@android:color/white"
+        android:textAppearance="?android:textAppearanceLarge"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:background="@color/colorPrimary"
+        />
+
+    <ListView
+        android:id="@+id/words"
+        android:layout_width="match_parent"
+        android:dividerHeight="0.5dp"
+        android:divider="@color/colorAccent"
+        android:layout_height="match_parent"/>
+
+</LinearLayout>
