--- a/app/src/main/res/layout/activity_news_detail_pager.xml
+++ b/app/src/main/res/layout/activity_news_detail_pager.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
     android:layout_height="match_parent"
-    >
+    android:animateLayoutChanges="true">
 
     <com.vagad.utils.customviews.CustomViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        app:swipe_orientation="vertical"
+        android:layout_height="match_parent"
         android:visibility="gone"
-        android:layout_height="match_parent"/>
+        app:swipe_orientation="vertical" />
 
     <LinearLayout
         android:id="@+id/linNewsDetail"
@@ -52,62 +52,88 @@
                     android:layout_alignParentRight="true"
                     android:padding="@dimen/activity_horizontal_margin"
                     android:src="@drawable/ic_tab_fav"
-                    android:tag="0"
-                    />
+                    android:tag="0" />
 
             </RelativeLayout>
 
         </RelativeLayout>
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_below="@+id/imgCover"
-            android:layout_weight="6"
-            android:orientation="vertical"
-            android:padding="@dimen/activity_horizontal_margin">
+            android:layout_weight="6">
 
-            <com.vagad.utils.fonts.HindiFontTextView
-                android:id="@+id/txtTime"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@color/colorGreyText" />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="@dimen/activity_horizontal_margin">
 
-            <com.vagad.utils.fonts.HindiFontTextView
-                android:id="@+id/txtTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/common_margin"
-                android:gravity="center"
-                android:text="@string/title_activity_home"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textColor="@android:color/black" />
+                <com.vagad.utils.fonts.HindiFontTextView
+                    android:id="@+id/txtTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textAppearance="?android:textAppearanceMedium"
+                    android:textColor="@color/colorGreyText" />
 
-            <com.vagad.utils.fonts.HindiFontTextView
-                android:id="@+id/txtDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/common_margin"
-                android:gravity="center"
-                android:textAppearance="?android:textAppearanceLarge"
-                android:textColor="@color/colorGreyText" />
+                <com.vagad.utils.fonts.HindiFontTextView
+                    android:id="@+id/txtTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/common_margin"
+                    android:gravity="center"
+                    android:text="@string/title_activity_home"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:textColor="@android:color/black" />
 
+                <com.vagad.utils.fonts.HindiFontTextView
+                    android:id="@+id/txtDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/common_margin"
+                    android:gravity="center"
+                    android:textAppearance="?android:textAppearanceLarge"
+                    android:textColor="@color/colorGreyText" />
 
-        </LinearLayout>
+                <com.vagad.utils.fonts.HindiFontTextView
+                    android:id="@+id/txt_more_read"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/common_margin"
+                    android:background="@color/color_bg"
+                    android:gravity="center"
+                    android:padding="@dimen/activity_horizontal_margin"
+                    android:text="@string/more_read"
+                    android:textAppearance="?android:textAppearanceSmall"
+                    android:textColor="@android:color/black" />
+
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/adView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="@string/banner_home_footer" />
+
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_share"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:src="@drawable/ic_share"
         android:tag="0"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:visibility="visible"
-        />
+        android:visibility="visible" />
 </RelativeLayout>
