--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,6 @@
     <color name="colorAccent">#E25667</color>-->
     <color name="color_bg">#E4E4E4</color>
     <color name="colorPrimary">#7E57C2</color>
-    <color name="colorPrimaryDark">#7E57C2</color>
+    <color name="colorPrimaryDark">#6f3bca</color>
     <color name="colorAccent">#D7668C</color>
 </resources>
