--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -131,4 +131,14 @@
         app:adSize="BANNER"
         app:adUnitId="@string/banner_home_footer"/>
 
+   <!-- <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:elevation="8dp"
+        android:src="@drawable/ic_tab_fav"
+        app:layout_anchor="@id/app_bar_layout"
+        app:layout_anchorGravity="bottom|right|end"
+        />-->
+
 </android.support.design.widget.CoordinatorLayout>
