--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,21 +8,33 @@
     tools:context="com.vagad.dashboard.HomeActivity">
 
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_above="@+id/adView"
         android:layout_height="match_parent" />
 
+    <ImageView
+        android:id="@+id/click"
+        android:onClick="onClick"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="14dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp" />
 
-    <com.google.android.gms.ads.AdView
+
+   <!-- <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_alignParentBottom="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         ads:adSize="BANNER"
-        ads:adUnitId="@string/banner_home_footer"/>
+        ads:adUnitId="@string/banner_home_footer"/>-->
 
 
 </RelativeLayout>
