--- a/app/src/main/res/layout/list_item_fav.xml
+++ b/app/src/main/res/layout/list_item_fav.xml
@@ -30,7 +30,7 @@
                 android:layout_height="100dp"
                 android:transitionName="profile"
                 android:scaleType="centerCrop"
-                tools:src="@drawable/splash_bg" />
+                tools:src="@drawable/ic_placeholder" />
 
             <LinearLayout
                 android:layout_width="match_parent"
