--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,13 @@
     <dimen name="default_circle_indicator_radius">3dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="common_margin">10dp</dimen>
+	<dimen name="defaultButtonSize">56dp</dimen>
+	
+	<dimen name="faboptions_button_padding">8dp</dimen>
+    <dimen name="faboptions_button_layout_height">44dp</dimen>
+    <dimen name="faboptions_layout_height">98dp</dimen>
+    <dimen name="faboptions_separator_margin">2dp</dimen>
+    <dimen name="faboptions_icon_size">20dp</dimen>
+    <dimen name="faboptions_radius">20dp</dimen>
+    <dimen name="faboptions_vector_dimensions">24dp</dimen>
 </resources>
