--- a/app/src/main/res/layout/layout_header_fav.xml
+++ b/app/src/main/res/layout/layout_header_fav.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:gravity="center"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -42,5 +43,13 @@
         android:textColor="@color/primary_text"
         android:text="@string/no_fav_avail"
         />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:visibility="gone" />
 
 </LinearLayout>
