--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -5,9 +5,6 @@
     <group
         android:id="@+id/group">
         <item
-            android:id="@+id/menu_vagad_news"
-            android:title="@string/event_and_news"/>
-        <item
             android:id="@+id/menu_favourite"
             android:title="Favorites"/>
         <item
@@ -19,5 +16,8 @@
         <item
             android:id="@+id/menu_share"
             android:title="Share App"/>
+        <item
+            android:id="@+id/menu_more_news"
+            android:title="More News"/>
     </group>
 </menu>
