--- a/app/src/main/res/layout/activity_add_news.xml
+++ b/app/src/main/res/layout/activity_add_news.xml
@@ -12,7 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:fillViewport="true"
         android:paddingTop="220dp"
         android:scrollbars="none"
         android:layout_alignParentTop="true"
@@ -36,13 +35,14 @@
                 app:contentPaddingLeft="16dp"
                 app:contentPaddingRight="16dp">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="@dimen/activity_horizontal_margin">
 
                     <android.support.design.widget.TextInputLayout
+                        android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColorHint="@color/colorGreyText"
@@ -59,10 +59,12 @@
                     </android.support.design.widget.TextInputLayout>
 
                     <android.support.design.widget.TextInputLayout
+                        android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColorHint="@color/colorGreyText"
                         android:layout_marginTop="10dp"
+                        android:layout_below="@+id/title"
                         tools:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
                         <EditText
@@ -79,6 +81,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:layout_below="@+id/name"
+                        android:id="@+id/mobile"
                         android:textColorHint="@color/colorGreyText"
                         tools:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
@@ -96,6 +100,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
+                        android:layout_below="@+id/mobile"
+                        android:id="@+id/desc"
                         android:textColorHint="@color/colorGreyText"
                         tools:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
@@ -112,6 +118,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_marginTop="10dp"
+                        android:layout_below="@+id/desc"
                         android:layout_height="wrap_content">
 
                         <android.support.v7.widget.AppCompatButton
@@ -135,7 +142,7 @@
 
                     </RelativeLayout>
 
-                </LinearLayout>
+                </RelativeLayout>
             </android.support.v7.widget.CardView>
         </LinearLayout>
 
