--- a/app/src/main/res/layout/activity_news_detail_pager.xml
+++ b/app/src/main/res/layout/activity_news_detail_pager.xml
@@ -103,12 +103,12 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="@dimen/common_margin"
-                    android:background="@color/color_bg"
+                    android:background="@color/colorAccent"
                     android:gravity="center"
                     android:padding="@dimen/activity_horizontal_margin"
                     android:text="@string/more_read"
                     android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@android:color/black" />
+                    android:textColor="@android:color/white" />
 
                 <com.google.android.gms.ads.AdView
                     android:id="@+id/adView"
