--- a/app/src/main/res/layout/layout_header_fav.xml
+++ b/app/src/main/res/layout/layout_header_fav.xml
@@ -40,7 +40,7 @@
         android:visibility="gone"
         android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@color/primary_text"
+        android:textColor="@android:color/white"
         android:text="@string/no_fav_avail"
         />
 
