--- a/app/src/main/res/layout/list_item_fav.xml
+++ b/app/src/main/res/layout/list_item_fav.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/color_bg"
+    android:background="@color/colorPrimary"
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
