--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/color_bg"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@android:color/white"
-        app:cardElevation="5dp"
         app:cardPreventCornerOverlap="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
         app:cardUseCompatPadding="true"
+        app:cardElevation="5dp"
         app:contentPadding="@dimen/common_margin">
 
         <RelativeLayout
