--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -88,6 +88,13 @@
         <attr name="background_color" format="reference" type="int" />
         <attr name="fab_color" format="reference" type="int" />
     </declare-styleable>
+	
+	<declare-styleable name="FlowLayout">
+		<attr name="android:gravity" />
+	</declare-styleable>
+	<declare-styleable name="FlowLayout_Layout">
+		<attr name="android:layout_gravity" />
+	</declare-styleable>
 
 
 </resources>
