--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-   <!-- <color name="colorPrimary">#F44336</color>
-    <color name="colorPrimaryDark">#D32F2F</color>
-    <color name="colorAccent">#4CAF50</color>-->
+    <!-- <color name="colorPrimary">#F44336</color>
+     <color name="colorPrimaryDark">#D32F2F</color>
+     <color name="colorAccent">#4CAF50</color>-->
     <color name="tabSelectedIconColor">#ffffff</color>
     <color name="tabUnselectedIconColor">#F1A5A5</color>
     <color name="transparentColor">#00000000</color>
@@ -13,11 +13,17 @@
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="divider">#BDBDBD</color>
-   <!-- <color name="colorPrimary">#32375C</color>
-    <color name="colorPrimaryDark">#212544</color>
-    <color name="colorAccent">#E25667</color>-->
+    <!-- <color name="colorPrimary">#32375C</color>
+     <color name="colorPrimaryDark">#212544</color>
+     <color name="colorAccent">#E25667</color>-->
     <color name="color_bg">#E4E4E4</color>
-    <color name="colorPrimary">#7E57C2</color>
+    <color name="colorPrimary">#414445</color>
+    <color name="colorPrimaryDark">#2d2f2f</color>
+    <color name="colorAccent">#E7A71C</color>
+    <color name="colorTextColor">#BCBDBE</color>
+    <color name="colorButtonColor">#515557</color>
+    <color name="colorPrimaryRipple">#42414445</color>
+    <!--<color name="colorPrimary">#7E57C2</color>
     <color name="colorPrimaryDark">#6f3bca</color>
-    <color name="colorAccent">#D7668C</color>
+    <color name="colorAccent">#D7668C</color>-->
 </resources>
