--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlHighlight">@color/colorPrimaryRipple</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -47,4 +48,6 @@
         <item name="android:windowEnterAnimation">@anim/dialog_up</item>
         <item name="android:windowExitAnimation">@anim/dialog_down</item>
     </style>
+	
+	
 </resources>
