--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,7 @@
     <color name="colorPrimaryRipple">#42414445</color>
     <!--<color name="colorPrimary">#7E57C2</color>
     <color name="colorPrimaryDark">#6f3bca</color>
-    <color name="colorAccent">#D7668C</color>-->
+    <color name="colorAccent">#D7668C</color>
+#1F497D, #F38F08, #4A679A
+-->
 </resources>
