--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -55,7 +55,7 @@
                     android:orientation="vertical"
                     android:padding="@dimen/activity_horizontal_margin">
 
-                    <TextView
+                    <com.vagad.utils.fonts.CustomFontTextView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_above="@+id/txtMe"
