--- a/app/src/main/res/layout/layout_toolbar.xml
+++ b/app/src/main/res/layout/layout_toolbar.xml
@@ -8,23 +8,35 @@
     android:elevation="10dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <com.vagad.utils.fonts.HindiFontTextView
-            android:id="@+id/toolbar_title"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:lines="1"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:textColor="@android:color/white" />
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <com.vagad.utils.fonts.CustomFontTextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="5dp"
+                android:transitionName="profile"
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:textStyle="bold"
+                android:textAppearance="?android:textAppearanceLarge"
+                android:textColor="@android:color/white"
+                />
 
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBarToolbar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:padding="@dimen/activity_horizontal_margin"
+            android:visibility="gone" />
 
 </android.support.v7.widget.Toolbar>
