--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -88,13 +88,22 @@
         <attr name="background_color" format="reference" type="int" />
         <attr name="fab_color" format="reference" type="int" />
     </declare-styleable>
-	
-	<declare-styleable name="FlowLayout">
-		<attr name="android:gravity" />
-	</declare-styleable>
-	<declare-styleable name="FlowLayout_Layout">
-		<attr name="android:layout_gravity" />
-	</declare-styleable>
+
+    <declare-styleable name="FlowLayout">
+        <attr name="flow" format="boolean"/>
+        <attr name="childSpacing" format="enum|dimension">
+            <enum name="auto" value="-65536"/>
+        </attr>
+        <attr name="childSpacingForLastRow" format="enum|dimension">
+            <enum name="auto" value="-65536"/>
+            <enum name="align" value="-65537"/>
+        </attr>
+        <attr name="rowSpacing" format="enum|dimension">
+            <enum name="auto" value="-65536"/>
+        </attr>
+        <attr name="rtl" format="boolean"/>
+        <attr name="maxRows" format="integer"/>
+    </declare-styleable>
 
 
 </resources>
