--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -34,11 +34,11 @@
             android:layout_below="@+id/txtApp"
             android:layout_marginTop="5dp"
             android:paddingLeft="@dimen/activity_horizontal_margin"
-            app:fillColor="@color/colorPrimary"
-            app:pageColor="@android:color/white"
-            app:radius="4dp"
+            app:fillColor="@color/colorAccent"
+            app:pageColor="@android:color/transparent"
+            app:radius="6dp"
             app:spaceWidth="8"
-            app:strokeColor="@color/colorPrimary" />
+            app:strokeColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/txtDone"
