--- a/app/src/main/res/layout/activity_news_detail_pager.xml
+++ b/app/src/main/res/layout/activity_news_detail_pager.xml
@@ -56,75 +56,87 @@
 
             </RelativeLayout>
 
+            <com.vagad.utils.fonts.HindiFontTextView
+                android:id="@+id/txt_more_read"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:padding="10dp"
+                android:layout_margin="10dp"
+                android:layout_alignParentBottom="true"
+                android:text="@string/more_read"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold" />
+
         </RelativeLayout>
 
         <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:paddingBottom="50dp"
+            android:clipToPadding="false"
             android:layout_below="@+id/imgCover"
             android:layout_weight="6">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/activity_horizontal_margin">
 
-                <com.vagad.utils.fonts.HindiFontTextView
-                    android:id="@+id/txtTime"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@color/colorGreyText" />
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                <com.vagad.utils.fonts.HindiFontTextView
-                    android:id="@+id/txtTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/common_margin"
-                    android:gravity="center"
-                    android:text="@string/title_activity_home"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:textColor="@android:color/black" />
+                    <com.vagad.utils.fonts.HindiFontTextView
+                        android:id="@+id/txtTitle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/common_margin"
+                        android:gravity="center"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginRight="10dp"
+                        android:text="@string/title_activity_home"
+                        android:textAppearance="?android:textAppearanceLarge"
+                        android:textColor="@android:color/black" />
 
-                <com.vagad.utils.fonts.HindiFontTextView
-                    android:id="@+id/txtDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/common_margin"
-                    android:gravity="center"
-                    android:textAppearance="?android:textAppearanceLarge"
-                    android:textColor="@color/colorGreyText" />
+                    <com.vagad.utils.fonts.HindiFontTextView
+                        android:id="@+id/txtTime"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:textAppearance="?android:textAppearanceMedium"
+                        android:textColor="@color/colorGreyText" />
 
-                <com.vagad.utils.fonts.HindiFontTextView
-                    android:id="@+id/txt_more_read"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/common_margin"
-                    android:background="@color/colorAccent"
-                    android:gravity="center"
-                    android:padding="@dimen/activity_horizontal_margin"
-                    android:text="@string/more_read"
-                    android:textAppearance="?android:textAppearanceSmall"
-                    android:textColor="@android:color/white" />
+                    <com.vagad.utils.fonts.HindiFontTextView
+                        android:id="@+id/txtDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/common_margin"
+                        android:gravity="center"
+                        android:textAppearance="?android:textAppearanceLarge"
+                        android:textColor="@color/colorGreyText" />
 
-                <com.google.android.gms.ads.AdView
-                    android:id="@+id/adView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="@dimen/activity_horizontal_margin"
-                    ads:adSize="BANNER"
-                    ads:adUnitId="@string/banner_home_footer" />
-
-            </LinearLayout>
+                </LinearLayout>
+            </RelativeLayout>
 
         </android.support.v4.widget.NestedScrollView>
 
     </LinearLayout>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/banner_home_footer" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btn_share"
