--- a/app/src/main/res/layout/activity_news_list.xml
+++ b/app/src/main/res/layout/activity_news_list.xml
@@ -1,4 +1,5 @@
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_layout"
     android:layout_width="match_parent"
@@ -52,22 +53,25 @@
         android:id="@+id/design_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_bg"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/activity_horizontal_margin"
+        android:clickable="true"
         app:behavior_hideable="true"
         android:orientation="vertical"
         app:behavior_peekHeight="0dp"
-        app:elevation="4dp"
         app:layout_behavior="@string/bottom_sheet_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
         <com.vagad.utils.fonts.CustomFontTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Select News Type"
             android:gravity="center"
+            android:textColor="@android:color/white"
             android:textAppearance="?android:textAppearanceLarge"
             android:textStyle="bold"
             />
@@ -81,6 +85,49 @@
             app:rowSpacing="16dp">
 
             <com.vagad.utils.fonts.CustomFontTextView
+                android:onClick="onClickRajasthan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:text="Rajasthan"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                />
+
+            <com.vagad.utils.fonts.CustomFontTextView
+                android:onClick="onClickIndia"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:text="India"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                />
+
+            <com.vagad.utils.fonts.CustomFontTextView
+                android:onClick="onClickWorld"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:text="World"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                />
+
+
+            <com.vagad.utils.fonts.CustomFontTextView
                 android:onClick="onClickEntertainment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -90,6 +137,36 @@
                 android:paddingBottom="10dp"
                 android:background="@drawable/round_corner_yellow_with_transparent_bg"
                 android:text="Entertainment"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                />
+
+
+
+            <com.vagad.utils.fonts.CustomFontTextView
+                android:onClick="onClickGadget"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:text="Gadget"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                />
+
+            <com.vagad.utils.fonts.CustomFontTextView
+                android:onClick="onClickFilmReview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="@drawable/round_corner_yellow_with_transparent_bg"
+                android:text="Film Review"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 />
@@ -131,24 +208,11 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/round_corner_yellow_with_transparent_bg"
-                android:text="Education"
+                android:text="Career"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 />
 
-            <com.vagad.utils.fonts.CustomFontTextView
-                android:onClick="onClickWorld"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="@drawable/round_corner_yellow_with_transparent_bg"
-                android:text="World"
-                android:textStyle="bold"
-                android:textColor="@color/colorAccent"
-                />
 
 
             <com.vagad.utils.fonts.CustomFontTextView
@@ -175,7 +239,7 @@
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="@drawable/round_corner_yellow_with_transparent_bg"
-                android:text="Bollywood"
+                android:text="Hollywood"
                 android:textStyle="bold"
                 android:textColor="@color/colorAccent"
                 />
@@ -196,7 +260,11 @@
                 />
 
 
+
+
         </com.vagad.utils.customviews.FlowLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
