--- a/app/src/main/res/layout/fragment_news_details.xml
+++ b/app/src/main/res/layout/fragment_news_details.xml
@@ -94,9 +94,9 @@
                 android:text="@string/more_read"
                 android:padding="@dimen/activity_horizontal_margin"
                 android:layout_gravity="center"
-                android:background="@color/color_bg"
+                android:background="@color/colorAccent"
                 android:textAppearance="?android:textAppearanceSmall"
-                android:textColor="@android:color/black" />
+                android:textColor="@android:color/white" />
 
 
         </LinearLayout>
