--- a/app/src/main/res/layout/activity_add_news.xml
+++ b/app/src/main/res/layout/activity_add_news.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:ignore="RtlHardcoded">
 
-    <android.support.v4.widget.NestedScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:id="@+id/flexible.example.cardview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -41,7 +41,7 @@
                     android:orientation="vertical"
                     android:padding="@dimen/activity_horizontal_margin">
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -56,9 +56,9 @@
                             android:lines="1"
                             android:textColorHint="@color/colorGreyText" />
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -75,9 +75,9 @@
                             android:lines="1"
                             android:textColorHint="@color/colorGreyText" />
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -94,9 +94,9 @@
                             android:inputType="number"
                             android:textColorHint="@color/colorGreyText" />
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
+                    <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
@@ -112,7 +112,7 @@
                             android:hint="News Description"
                             android:textColorHint="@color/colorGreyText" />
 
-                    </android.support.design.widget.TextInputLayout>
+                    </com.google.android.material.textfield.TextInputLayout>
 
 
                     <RelativeLayout
@@ -121,7 +121,7 @@
                         android:layout_below="@+id/desc"
                         android:layout_height="wrap_content">
 
-                        <android.support.v7.widget.AppCompatButton
+                        <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btnSubmit"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -143,10 +143,10 @@
                     </RelativeLayout>
 
                 </RelativeLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <ImageView
         android:id="@+id/imgNews"
