--- a/app/src/main/res/layout/activity_news_detail_pager.xml
+++ b/app/src/main/res/layout/activity_news_detail_pager.xml
@@ -72,7 +72,7 @@
 
         </RelativeLayout>
 
-        <android.support.v4.widget.NestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:paddingBottom="50dp"
@@ -123,7 +123,7 @@
                 </LinearLayout>
             </RelativeLayout>
 
-        </android.support.v4.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </LinearLayout>
 
@@ -138,7 +138,7 @@
         ads:adSize="BANNER"
         ads:adUnitId="@string/banner_home_footer" />
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
