--- a/app/src/main/res/layout/activity_search_city.xml
+++ b/app/src/main/res/layout/activity_search_city.xml
@@ -5,7 +5,7 @@
     android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         app:contentPadding="5dp"
         android:layout_margin="16dp"
@@ -25,9 +25,9 @@
             android:background="@android:color/transparent"
             />
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:paddingLeft="16dp"
         android:paddingBottom="16dp"
