--- a/app/src/main/res/layout/layout_header_news.xml
+++ b/app/src/main/res/layout/layout_header_news.xml
@@ -5,12 +5,12 @@
     android:padding="@dimen/activity_horizontal_margin"
     android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="200dp">
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 
     <com.vagad.utils.pageindicator.CirclePageIndicator
         android:id="@+id/pageIndicator"
