--- a/app/src/main/res/layout/list_item_fav.xml
+++ b/app/src/main/res/layout/list_item_fav.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimary"
    >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -79,6 +79,6 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
