--- a/app/src/main/res/layout/list_item_report.xml
+++ b/app/src/main/res/layout/list_item_report.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,6 +90,6 @@
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
